# projector-controller-iot

./: .gitignore  README.md
bracket/: bracket-bracket.step  bracket-bracket.stl  bracket.20250913-202036.FCBak  bracket.20250915-002108.FCBak  bracket.FCStd  projector bracket.FCStd
firmware/: .env.example  Cargo.toml  build.rs  partitions.csv
firmware/.cargo/: config.toml
firmware/src/: io.rs  log.rs  main.rs  mqtt.rs  net.rs  ota.rs  projector.rs  rs232.rs  wifi.rs
pcb/: fp-info-cache  projector-controller-iot.kicad_pcb  projector-controller-iot.kicad_prl  projector-controller-iot.kicad_pro  projector-controller-iot.kicad_sch  projector-controller-iot.kicad_sch-bak  ~projector-controller-iot.kicad_pcb.lck
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
