[package]
edition      = "2021"
name         = "firmware"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "firmware"
path = "./src/main.rs"

[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32s3"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }

embassy-net = { version = "0.7.0", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns"
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.8.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = "0.5.0"
esp-hal-embassy = { version = "0.9.0", features = ["esp32s3"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32s3",
  "smoltcp",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
static_cell = { version = "2.1.1", features = ["nightly"] }
esp-println = { version = "0.15.0", features = ["esp32s3", "log-04", "defmt-espflash", "timestamp"] }
esp-backtrace = { version = "0.17.0", features = ["defmt"] }
rust-mqtt = { version = "0.3.0", features = ["defmt", "no_std", "tls"], default-features = false }
defmt = "1.0.1"
serde = { version = "1.0.219", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.143", default-features = false, features = ["alloc"] }
embassy-sync = "0.7.2"
heapless = "0.9.1"
serde-json-core = "0.6.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[build-dependencies]
dotenvy = "0.15.7"
